main page update

--- a/index.html
+++ b/index.html
@@ -3,5 +3,20 @@ layout: layouts/base.njk
 title: MŠ Parmská
 ---
 
-<!-- proměnlivý obsah -->
+<section>
+  <a class="news-meal__icon-link" href="#" title="Všechny aktuality">
+    <img class="news-meal__icon" src="/images/news.svg">
+  </a> <!-- odkaz na všechny aktuality -->
+  <h2 class="news-meal__heading">Aktuality</h2>
+  <!-- DOPLNIT poslední aktuality -->
+</section>
+
+<section>
+  <a class="news-meal__icon-link" href="#" title="Celý jídelníček">
+    <img class="news-meal__icon" src="/images/menu3.svg">
+  </a> <!-- odkaz na celý jídelníček -->
+  <h2 class="news-meal__heading">Jídelníček</h2>
+  <!-- DOPLNIT jídelníček na dnes a zítra -->
+  <a  class="news-meal__link" href="#">Celý jídelníček</a> <!-- odkaz na celý jídelníček -->
+</section>
 
