--- a/o-skolce/dokumenty.html
+++ b/o-skolce/dokumenty.html
@@ -2,3 +2,65 @@
 layout: layouts/documents.njk
 title: MŠ Parmská | O školce
 ---
+
+<section class="documents__budget" id="budget">
+  <h2>Rozpočty</h2>
+  <ul>
+    <li>
+      Položkový rozpočet 2020
+      <a href="/docs/rozpocet-2020.pdf" target="_blank">[PDF]</a>
+    </li>
+    <li>
+      Položkový rozpočet 2019
+      <a href="/docs/rozpocet-2019.pdf" target="_blank">[PDF]</a>
+    </li>
+    <li>
+      Položkový rozpočet 2018
+      <a href="/docs/rozpocet-2018.pdf" target="_blank">[PDF]</a>
+    </li>
+    <li>
+      Návrh rozpočtu 2020
+      <a href="/docs/navrh-rozpoctu-2020.pdf" target="_blank">[PDF]</a>
+    </li>
+    <li>
+      Návrh rozpočtu 2019
+      <a href="/docs/navrh-rozpoctu-2019.pdf" target="_blank">[PDF]</a>
+    </li>
+  </ul>
+</section>
+
+<section class="documents__reports">
+  <h2>Výroční zprávy</h2>
+  <ul>
+    <li>
+      Výroční zpráva 2019/2020
+      <a href="/docs/vyrocni-zprava-2019-2020.pdf" target="_blank">[PDF]</a>
+    </li>
+    <li>
+      Výroční zpráva 2017/2018
+      <a href="/docs/vyrocni-zprava-2017-2018.pdf" target="_blank">[PDF]</a>
+    </li>
+  </ul>
+</section>
+
+<section class="documents__foundation">
+  <h2>Zřizovací listina</h2>
+  <span>Zřizovací listina</span>
+  <a href="/docs/zrizovaci-listina.pdf" target="_blank">[PDF]</a>
+</section>
+
+<section class="documents__gdpr">
+  <h2>GDPR</h2>
+  <p>Zde je k dispozici dokumentace vztahující se k ochraně osobních údajů:</p>
+  <ul>
+    <li>
+      Záznam o zpracování
+      <a href="/docs/zaznam-o-zpracovani.xlsx">[xlsx]</a>
+    </li>
+    <li>
+      Prohlášení správce
+      <a href="/docs/prohlaseni-spravce.docx">[docx]</a>
+      <a href="/docs/prohlaseni-spravce.pdf" target="_blank">[PDF]</a>
+    </li>
+  </ul>
+</section>
