--- a/pro-rodice/platby.html
+++ b/pro-rodice/platby.html
@@ -2,3 +2,58 @@
 layout: layouts/payment.njk
 title: MŠ Parmská | Pro rodiče
 ---
+
+<p>Sazby stravného platné od 1. 9. 2019</p>
+<table>
+  <tr>
+    <th scope="colgroup" colspan="2"></th>
+    <th scope="col">Svačina</th>
+    <th scope="col">Oběd</th>
+    <th scope="col">Svačina</th>
+    <th scope="col">Celkem na den</th>
+    <th scope="col">Celkem na měsíc (21 dnů)</th>
+  </tr>
+  <tr>
+    <th scope="rowgroup" rowspan="2" class="payment__th--wider">Děti s odkladem školní docházky</th>
+    <th scope="row">polodenní</th>
+    <td>7 Kč</td>
+    <td>28 Kč</td>
+    <td>-</td>
+    <td>35 Kč</td>
+    <td>735 Kč</td>
+  </tr>
+  <tr>
+    <th scope="row">celodenní</th>
+    <td>7 Kč</td>
+    <td>28 Kč</td>
+    <td>7 Kč</td>
+    <td>42 Kč</td>
+    <td>882 Kč</td>
+  </tr>
+  <tr>
+    <th scope="rowgroup" rowspan="2" class="payment__th--wider">Ostatní děti</th>
+    <th scope="row">polodenní</th>
+    <td>7 Kč</td>
+    <td>26 Kč</td>
+    <td>-</td>
+    <td>33 Kč</td>
+    <td>693 Kč</td>
+  </tr>
+  <tr>
+    
+    <th scope="row">celodenní</th>
+    <td>7 Kč</td>
+    <td>26 Kč</td>
+    <td>7 Kč</td>
+    <td>40 Kč</td>
+    <td>840 Kč</td>
+  </tr>
+</table>
+
+<p>Výše úplaty za vzdělávání (školného) činí Kč 600,- na měsíc.</p>
+<p>Výše úplaty za vzdělávání (školného) od 1. 9. 2021 bude činit Kč 700,- na měsíc.</p>
+<p>Číslo účtu pro:</p>
+<ul>
+  <li>jednorázové platby a trvalé příkazy: 2000891359/0800</li>
+  <li>inkasní platby: 100239211/0800</li>
+</ul>
