minor styling design changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ title: MŠ Parmská
   </a> <!-- odkaz na celý jídelníček -->
   <h1 class="news-meal__heading">Jídelníček</h1>
   <!-- DOPLNIT jídelníček na dnes a zítra -->
-  <a  class="news-meal__link" href="#">Celý jídelníček</a> <!-- odkaz na celý jídelníček -->
+  <a  class="news-meal__link" href="/jidelnicek">Celý jídelníček</a>
 </section>
 
