--- a/pro-rodice/zapis.html
+++ b/pro-rodice/zapis.html
@@ -9,15 +9,21 @@ title: MŠ Parmská | Pro rodiče
   <p>Žádosti v papírové podobě jsou připravené u hospodářky školy od <strong>6. 4. 2021</strong></p>
   <p>Fyzický zápis v mateřské škole bude probíhat <strong>5. 5. 2021</strong></p>
   <p>Výsledky zápisu: Seznamy přijatých dětí pod registračními čísly budou zveřejněny způsobem obvyklým, na webových stránkách školy a v informační vitríně školy počínaje dnem <strong>28. 5. 2021.</strong></p>
-  <a class="enrolment__link" href="/docs/kriteria-pro-prijimani-deti-do-ms-2021-2022.pdf" target="_blank">Základní kritéria pro přijímání dětí do mateřských škol na školní rok 2021 – 2022 (pdf)</a>
-  <a class="enrolment__link" href="/docs/zadost-o-prijeti-k-predskolnimu-vzdelavani.doc">Žádost o přijetí dítěte k předškolnímu vzdělávání do MŠ (doc)</a>
-  <a class="enrolment__link" href="/docs/evidencni-list.doc">Evidenční list pro dítě v MŠ (doc)</a>
-  <a class="enrolment__link" href="/docs/zadost-o-zastaveni-prijimaciho-rizeni.docx">Žádost o zastavení přijímacího řízení (docx)</a>
   <p>Vážení rodiče, v sekci <a href="/o-skolce/vnitrek">Jak to u nás vypadá</a> máte možnost si prohlédnout prostory naší mateřské školy i naši zahradu.</p>
 </div>
 
+<aside class="enrolment__aside">
+  <h3>Dokumenty ke stažení</h3>
+  <ul>
+    <li><a class="enrolment__link" href="/docs/kriteria-pro-prijimani-deti-do-ms-2021-2022.pdf" target="_blank">Základní kritéria pro přijímání dětí do mateřských škol na školní rok 2021 – 2022 (pdf)</a></li>
+    <li><a class="enrolment__link" href="/docs/zadost-o-prijeti-k-predskolnimu-vzdelavani.doc">Žádost o přijetí dítěte k předškolnímu vzdělávání do MŠ (doc)</a></li>
+    <li><a class="enrolment__link" href="/docs/evidencni-list.doc">Evidenční list pro dítě v MŠ (doc)</a></li>
+    <li><a class="enrolment__link" href="/docs/zadost-o-zastaveni-prijimaciho-rizeni.docx">Žádost o zastavení přijímacího řízení (docx)</a></li>
+  </ul>
+</aside>
+
 <div class="enrolment__holidays">
-  <h2>Prázninový provoz v mateřských školách zřizovaných MČ Praha 15 v roce 2021</h2>
+  <h2>Prázninový provoz v mateřských školách v roce 2021</h2>
   <table>
     <thead>
       <tr>
@@ -46,6 +52,12 @@ title: MŠ Parmská | Pro rodiče
   </table>
   <p>V termínu od 23. 8. do 31. 8. 2021 bude ve všech mateřských školách ZAVŘENO.</p>
   <p class="enrolment__holidays--important">Mateřské školy budou v jednotlivých termínech prázdninového provozu přijímat z kapacitních důvodů pouze své kmenové děti.</p>
-  <a class="enrolment__link" href="/docs/zadost-o-prijeti-k-prazdninove-dochazce.doc">Žádost o přijetí k prázdninové docházce (doc)</a>
   <p>Ukončení přihlášek k prázdninovému provozu: 30. 4. 2021</p>
 </div>
+
+<aside class="enrolment__aside">
+  <h3>Dokumenty ke stažení</h3>
+  <ul>
+    <li><a class="enrolment__link" href="/docs/zadost-o-prijeti-k-prazdninove-dochazce.doc">Žádost o přijetí k prázdninové docházce (doc)</a></li>
+  </ul>
+</aside>
