design update of for-parents section

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@ title: MŠ Parmská
 ---
 
 <section>
-  <a class="news-meal__icon-link" href="#" title="Všechny aktuality">
+  <a class="news-meal__icon-link" href="/aktuality" title="Všechny aktuality">
     <img class="news-meal__icon" src="/images/news.svg">
-  </a> <!-- odkaz na všechny aktuality -->
+  </a>
   <h1 class="news-meal__heading">Aktuality</h1>
   <!-- DOPLNIT poslední aktuality -->
 </section>
 
 <section>
-  <a class="news-meal__icon-link" href="#" title="Celý jídelníček">
-    <img class="news-meal__icon" src="/images/menu3.svg">
-  </a> <!-- odkaz na celý jídelníček -->
+  <a class="news-meal__icon-link" href="/jidelnicek" title="Celý jídelníček">
+    <img class="news-meal__icon" src="/images/food.svg">
+  </a>
   <h1 class="news-meal__heading">Jídelníček</h1>
   <!-- DOPLNIT jídelníček na dnes a zítra -->
   <a  class="news-meal__link" href="/jidelnicek">Celý jídelníček</a>
