--- a/pro-rodice/platby.html
+++ b/pro-rodice/platby.html
@@ -10,8 +10,8 @@ title: MŠ Parmská | Pro rodiče
     <th scope="col">Svačina</th>
     <th scope="col">Oběd</th>
     <th scope="col">Svačina</th>
-    <th scope="col">Celkem na den</th>
-    <th scope="col">Celkem na měsíc (21 dnů)</th>
+    <th scope="col">Celkem / 1 den</th>
+    <th scope="col">Měsíc (21 dní)</th>
   </tr>
   <tr>
     <th scope="rowgroup" rowspan="2" class="payment__th--wider">Děti s odkladem školní docházky</th>
@@ -40,7 +40,6 @@ title: MŠ Parmská | Pro rodiče
     <td>693 Kč</td>
   </tr>
   <tr>
-    
     <th scope="row">celodenní</th>
     <td>7 Kč</td>
     <td>26 Kč</td>
