--- a/kontakty.html
+++ b/kontakty.html
@@ -28,7 +28,7 @@ title: MŠ Parmská | Kontakt
 
 <section class="contact__container">
   <div class="contact__class">
-    <img class="contact__image" src="/images/broucci.png" alt="Broučci">
+    <img class="contact__image" src="/images/broucci.jpg" alt="Broučci">
     <img class="contact__icon" src="/images/phone.svg" alt="">
     <span>739 781 211</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
@@ -38,7 +38,7 @@ title: MŠ Parmská | Kontakt
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/cvrcek.png" alt="Cvrček">
+    <img class="contact__image" src="/images/cvrcek.jpg" alt="Cvrček">
     <img class="contact__icon" src="/images/phone.svg" alt="">
     <span>739 789 958</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
@@ -47,7 +47,7 @@ title: MŠ Parmská | Kontakt
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/krtecek.png" alt="Krteček">
+    <img class="contact__image" src="/images/krtecek.jpg" alt="Krteček">
     <img class="contact__icon" src="/images/phone.svg" alt="">
     <span>774 244 462</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
@@ -67,7 +67,7 @@ title: MŠ Parmská | Kontakt
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/rakosnicek.gif" alt="Rákosníček">
+    <img class="contact__image" src="/images/rakosnicek.jpg" alt="Rákosníček">
     <img class="contact__icon" src="/images/phone.svg" alt="">
     <span>739 934 959</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
