--- a/tridy/makova-panenka.html
+++ b/tridy/makova-panenka.html
@@ -2,3 +2,16 @@
 layout: layouts/makova-panenka.njk
 title: MŠ Parmská | Třídy
 ---
+
+<h2>Vánoční besídka 2020</h2>
+<iframe src="https://www.youtube.com/embed/CCEf1Frrlao" frameborder="0" height="400" width="60%" title="YouTube MS Parmska - trida Makova panenka - Vanocni besidka 2020"></iframe>
+
+<h3>Ahoj děti doma.</h3>
+<p>Moc na vás s dětmi ve školce myslíme.</p>
+<p>Tento měsíc si hodně povídáme o lidském těle, zdravé výživě a zdraví.</p>
+<p>Pracujeme s těmito pracovními listy a vy si je můžete udělat také.</p>
+<p>Hodně zábavy vám přeje vaše Míša.</p>
+
+<div class="photogallery">
+
+</div>
