--- a/tridy/cvrcek.html
+++ b/tridy/cvrcek.html
@@ -2,3 +2,6 @@
 layout: layouts/cvrcek.njk
 title: MŠ Parmská | Třídy
 ---
+
+<h2>Vánoční besídka 2020</h2>
+<iframe src="https://www.youtube.com/embed/w7Zt71gUpwg" frameborder="0" height="400" width="60%" title="YouTube MS Parmska - trida Cvrcek - Vanocni besidka 2020"></iframe>
