form for locked class section

--- a/tridy/broucci.html
+++ b/tridy/broucci.html
@@ -3,15 +3,19 @@ layout: layouts/broucci.njk
 title: MŠ Parmská | Broučci
 ---
 
-<h2>Leden</h2>
-<p>Děti se radovaly z čerstvě napadaného sněhu. S radostí jsme si říkali básničky:</p>
-<ul>
-  <li>Sněhuláček stojí bos</li>
-  <li>Zima, zima už je tady</li>
-  <li>Přiletěla vrána</li>
-  <li>Běžela liška po ledu</li>
-</ul>
-<p>Také jsme hráli pohybovou hru Rychlík houká. Všichni si přejeme, aby nám sníh vydržel co nejdéle. </p>
+<div class="class__content--new">
+  <h2>Leden</h2>
+  <p>Děti se radovaly z čerstvě napadaného sněhu. S radostí jsme si říkali básničky:</p>
+  <ul>
+    <li>Sněhuláček stojí bos</li>
+    <li>Zima, zima už je tady</li>
+    <li>Přiletěla vrána</li>
+    <li>Běžela liška po ledu</li>
+  </ul>
+  <p>Také jsme hráli pohybovou hru Rychlík houká. Všichni si přejeme, aby nám sníh vydržel co nejdéle. </p>
+</div>
 
-<h2>Vánoční besídka 2020</h2>
-<iframe src="https://www.youtube.com/embed/gLcq1mPfDyo" frameborder="0" height="400" width="60%" title="YouTube MS Parmska - trida Broucci - Vanocni besidka 2020"></iframe>
+<div class="class__content--old">
+  <h2>Vánoční besídka 2020</h2>
+  <iframe class="class__iframe-yt" src="https://www.youtube.com/embed/gLcq1mPfDyo" frameborder="0" height="500" width="100%" title="YouTube MS Parmska - trida Broucci - Vanocni besidka 2020"></iframe>
+</div>
