--- a/tridy/cvrcek.html
+++ b/tridy/cvrcek.html
@@ -3,5 +3,7 @@ layout: layouts/cvrcek.njk
 title: MŠ Parmská | Cvrček
 ---
 
-<h2>Vánoční besídka 2020</h2>
-<iframe src="https://www.youtube.com/embed/w7Zt71gUpwg" frameborder="0" height="400" width="60%" title="YouTube MS Parmska - trida Cvrcek - Vanocni besidka 2020"></iframe>
+<div class="class__content--new">
+  <h2>Vánoční besídka 2020</h2>
+  <iframe class="class__iframe-yt" src="https://www.youtube.com/embed/w7Zt71gUpwg" frameborder="0" height="500" width="100%" title="YouTube MS Parmska - trida Cvrcek - Vanocni besidka 2020"></iframe>
+</div>
