--- a/tridy/makova-panenka.html
+++ b/tridy/makova-panenka.html
@@ -3,15 +3,19 @@ layout: layouts/makova-panenka.njk
 title: MŠ Parmská | Maková panenka
 ---
 
-<h2>Vánoční besídka 2020</h2>
-<iframe src="https://www.youtube.com/embed/CCEf1Frrlao" frameborder="0" height="400" width="60%" title="YouTube MS Parmska - trida Makova panenka - Vanocni besidka 2020"></iframe>
+<div class="class__content--new">
+  <h2>Vánoční besídka 2020</h2>
+  <iframe class="class__iframe-yt" src="https://www.youtube.com/embed/CCEf1Frrlao" frameborder="0" height="500" width="100%" title="YouTube MS Parmska - trida Makova panenka - Vanocni besidka 2020"></iframe>
+</div>
 
-<h2>Listopad</h2>
-<p>Ahoj děti doma.</p>
-<p>Moc na vás s dětmi ve školce myslíme.</p>
-<p>Tento měsíc si hodně povídáme o lidském těle, zdravé výživě a zdraví. Pracujeme s těmito pracovními listy a vy si je můžete udělat také.</p>
-<p>Hodně zábavy vám přeje vaše Míša.</p>
+<div class="class__content--old">
+  <h2>Listopad</h2>
+  <p>Ahoj děti doma.</p>
+  <p>Moc na vás s dětmi ve školce myslíme.</p>
+  <p>Tento měsíc si hodně povídáme o lidském těle, zdravé výživě a zdraví. Pracujeme s těmito pracovními listy a vy si je můžete udělat také.</p>
+  <p>Hodně zábavy vám přeje vaše Míša.</p>
 
-<div class="photogallery">
-
+  <div>
+    <!-- doplnit fotky pracovních listů -->
+  </div>
 </div>
