Bootstrap import, styles revision

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: MŠ Parmská
 
 <section>
   <a class="news-meal__icon-link" href="/aktuality" title="Všechny aktuality">
-    <img class="news-meal__icon" src="/images/news.svg">
+    <img class="icon" src="/images/news.svg">
   </a>
   <h1 class="news-meal__heading">Aktuality</h1>
   <!-- DOPLNIT poslední aktuality -->
@@ -13,7 +13,7 @@ title: MŠ Parmská
 
 <section>
   <a class="news-meal__icon-link" href="/jidelnicek" title="Celý jídelníček">
-    <img class="news-meal__icon" src="/images/food.svg">
+    <img class="icon" src="/images/food.svg">
   </a>
   <h1 class="news-meal__heading">Jídelníček</h1>
   <!-- DOPLNIT jídelníček na dnes a zítra -->
