--- a/kontakty.html
+++ b/kontakty.html
@@ -3,23 +3,23 @@ layout: layouts/contact.njk
 title: MŠ Parmská | Kontakt
 ---
 <section class="contact__container">
-  <div>
+  <div class="contact__staff">
     <h3>Ředitelka školy</h3>
-    <p class="contact__staff">Eva Humhalová</p>
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <p class="contact__employee">Eva Humhalová</p>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>274 865 950, 721 364 390</span>
   </div>
 
-  <div>
+  <div class="contact__staff">
     <h3>Hospodářka</h3>
-    <p class="contact__staff">Bc. Alena Bémová</p>
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <p class="contact__employee">Bc. Alena Bémová</p>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>274 865 950, 739 935 040</span>
   </div>
 
-  <div>
+  <div class="contact__staff">
     <div class="mt">
-      <img class="contact__icon" src="/images/email.svg" alt="">
+      <img class="icon" src="/images/email.svg" alt="">
       <a class="contact__link" href="mailto:msparmska@seznam.cz">msparmska@seznam.cz</a>
     </div>
     <p>datová schránka: dfnukuv</p>
@@ -28,69 +28,69 @@ title: MŠ Parmská | Kontakt
 
 <section class="contact__container">
   <div class="contact__class">
-    <img class="contact__image" src="/images/broucci.jpg" alt="Broučci">
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <a href="/tridy/broucci"><img class="contact__image" src="/images/broucci.jpg" alt="Broučci"></a>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>739 781 211</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
-    <p class="contact__staff">Blažena Křečková</p>
-    <p class="contact__staff">Bc. Eva Černohorská</p>
-    <p class="contact__staff">Vendula Hrdličková</p>
+    <p class="contact__employee">Blažena Křečková</p>
+    <p class="contact__employee">Bc. Eva Černohorská</p>
+    <p class="contact__employee">Vendula Hrdličková</p>
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/cvrcek.jpg" alt="Cvrček">
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <a href="/tridy/cvrcek"><img class="contact__image" src="/images/cvrcek.jpg" alt="Cvrček"></a>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>739 789 958</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
-    <p class="contact__staff">Lenka Havlíková</p>
-    <p class="contact__staff">Kristýna Račanová</p>
+    <p class="contact__employee">Lenka Havlíková</p>
+    <p class="contact__employee">Kristýna Račanová</p>
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/krtecek.jpg" alt="Krteček">
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <a href="/tridy/krtecek"><img class="contact__image" src="/images/krtecek.jpg" alt="Krteček"></a>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>774 244 462</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
-    <p class="contact__staff">Libuše Karvánková</p>
-    <p class="contact__staff">Romana Kuchařová</p>
-    <p class="contact__staff">Zoryana Potsko</p>
+    <p class="contact__employee">Libuše Karvánková</p>
+    <p class="contact__employee">Romana Kuchařová</p>
+    <p class="contact__employee">Zoryana Potsko</p>
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/makova-panenka.jpg" alt="Maková panenka">
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <a href="/tridy/makova-panenka"><img class="contact__image" src="/images/makova-panenka.jpg" alt="Maková panenka"></a>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>739 786 726</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
-    <p class="contact__staff">Eva Humhalová (ředitelka školky)</p>
-    <p class="contact__staff">Marie Buřičová (zástupkyně ředitelky)</p>
-    <p class="contact__staff">Karolína Musilová</p>
+    <p class="contact__employee">Eva Humhalová (ředitelka školky)</p>
+    <p class="contact__employee">Marie Buřičová (zástupkyně ředitelky)</p>
+    <p class="contact__employee">Karolína Musilová</p>
   </div>
 
   <div class="contact__class">
-    <img class="contact__image" src="/images/rakosnicek.jpg" alt="Rákosníček">
-    <img class="contact__icon" src="/images/phone.svg" alt="">
+    <a href="/tridy/rakosnicek"><img class="contact__image" src="/images/rakosnicek.jpg" alt="Rákosníček"></a>
+    <img class="icon" src="/images/phone.svg" alt="">
     <span>739 934 959</span>
     <p class="contact__sub-heading">třídní učitelky: </p>
-    <p class="contact__staff">Zlata Vítová</p>
-    <p class="contact__staff">Jana Savruková</p>
-    <p class="contact__staff">Veronika Buková</p>
+    <p class="contact__employee">Zlata Vítová</p>
+    <p class="contact__employee">Jana Savruková</p>
+    <p class="contact__employee">Veronika Buková</p>
   </div>
 </section>
 
 <section class="contact__container">
-  <div>
+  <div class="contact__staff">
     <h3>Školní stravování</h3>
     <div>
-      <p class="contact__staff">vedoucí kuchařka: Vladislava Bartošková</p>
-      <p class="contact__staff">kuchařka: Jana Olivová</p>
-      <p class="contact__staff">kuchařka: Kateřina Reitmeierová</p>
+      <p class="contact__employee">vedoucí kuchařka: Vladislava Bartošková</p>
+      <p class="contact__employee">kuchařka: Jana Olivová</p>
+      <p class="contact__employee">kuchařka: Kateřina Reitmeierová</p>
     </div>
   </div>
 
-  <div> 
+  <div class="contact__staff"> 
     <h3>Provozní pracovníci</h3>
-    <p class="contact__staff">Hana Malíková</p>
-    <p class="contact__staff">Svitlana Titovská</p>
-    <p class="contact__staff">Bedřiška Bečvaříková</p>
+    <p class="contact__employee">Hana Malíková</p>
+    <p class="contact__employee">Svitlana Titovská</p>
+    <p class="contact__employee">Bedřiška Bečvaříková</p>
   </div>
 </section>
