--- a/pro-rodice/zapis.html
+++ b/pro-rodice/zapis.html
@@ -50,8 +50,8 @@ title: MŠ Parmská | Pro rodiče
 <section class="enrolment__holidays">
   <div class="enrolment__main">
     <h2>Prázninový provoz v mateřských školách v roce 2021</h2>
-    <table>
-      <thead>
+    <table class="table table-sm table-bordered">
+      <thead class="thead-light">
         <tr>
           <th scope="col">Mateřské školy</th>
           <th scope="col">Termíny</th>
