MP class - activity images in carousel in modal

--- a/tridy/makova-panenka.html
+++ b/tridy/makova-panenka.html
@@ -4,6 +4,37 @@ title: MŠ Parmská | Maková panenka
 ---
 
 <div class="class__content--new">
+  <h2>Březen</h2>
+  <p>Ahoj děti, školka je sice zavřená, ale vy si můžete pohrát s následujícími zábavnými listy a zapamatujte si dvě básničky.</p>
+  <div class="class__gallery" data-toggle="modal" data-target="#galleryModal2">
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_01.jpeg" alt="pracovní list - vybarvování jaro" data-target="#galleryCarousel2" data-slide-to="0">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_02.jpeg" alt="pracovní list - vybarvování věk" data-target="#galleryCarousel2" data-slide-to="1">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_03.jpeg" alt="pracovní list - vybarvování květiny" data-target="#galleryCarousel2" data-slide-to="2">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_04.jpeg" alt="pracovní list - obkreslování čísla" data-target="#galleryCarousel2" data-slide-to="3">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_05.jpeg" alt="pracovní list - vybarvování květiny" data-target="#galleryCarousel2" data-slide-to="4">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_06.jpeg" alt="pracovní list - obkreslování sněženka" data-target="#galleryCarousel2" data-slide-to="5">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_07.jpeg" alt="pracovní list - básnička Petrklíč" data-target="#galleryCarousel2" data-slide-to="6">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2021-03-01_08.jpeg" alt="pracovní list - básnička Konvalinka" data-target="#galleryCarousel2" data-slide-to="7">
+    </div>
+  </div>
+</div>
+
+<div class="class__content--old">
   <h2>Vánoční besídka 2020</h2>
   <iframe class="class__iframe-yt" src="https://www.youtube.com/embed/CCEf1Frrlao" frameborder="0" height="500" width="100%" title="YouTube MS Parmska - trida Makova panenka - Vanocni besidka 2020"></iframe>
 </div>
@@ -15,7 +46,30 @@ title: MŠ Parmská | Maková panenka
   <p>Tento měsíc si hodně povídáme o lidském těle, zdravé výživě a zdraví. Pracujeme s těmito pracovními listy a vy si je můžete udělat také.</p>
   <p>Hodně zábavy vám přeje vaše Míša.</p>
 
-  <div>
-    <!-- doplnit fotky pracovních listů -->
+  <div class="class__gallery" data-toggle="modal" data-target="#galleryModal1">
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_01.jpeg" alt="pracovní list - holčička na obkreslení" data-target="#galleryCarousel1" data-slide-to="0">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_02.jpeg" alt="pracovní list - obkreslení čištění zubů" data-target="#galleryCarousel1" data-slide-to="1">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_03.jpeg" alt="pracovní list - orgány v těle" data-target="#galleryCarousel1" data-slide-to="2">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_04.jpeg" alt="pracovní list - doktorský kufřík" data-target="#galleryCarousel1" data-slide-to="3">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_05.jpeg" alt="pracovní list - naše smysly" data-target="#galleryCarousel1" data-slide-to="4">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_06.jpeg" alt="pracovní list - lékařské potřeby" data-target="#galleryCarousel1" data-slide-to="5">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_07.jpeg" alt="pracovní list - vkládačka kostra" data-target="#galleryCarousel1" data-slide-to="6">
+    </div>
+    <div class="class__gallery-item">
+      <img class="class__activity" src="/docs-classes/MK_2020-11-15_08.jpeg" alt="pracovní list - kostra" data-target="#galleryCarousel1" data-slide-to="7">
+    </div>
   </div>
 </div>
